# tp_res

./: CMakeLists.txt  main.c  medium.c  receiving.c  sending.c
include/: logic.h
src/: coding.c  decoding.c  logic.c
